css/main.css
:root {
    --color-primary: rgb(233, 0, 0);
    --color-primary-dark: rgb(175, 0, 0);
    --color-secondary: rgb(26, 26, 105);
    --color-tertiary: rgb(105, 26, 52);
    
    --transparent--dark: rgba(0, 0, 0, 0.315);
    --transparent-light: rgba(255, 255, 255, 0.315);
    --dimmed-text: rgba(255, 255, 255, 0.589);
    --transparent-blue: rgba(102, 136, 209, 0.26);

}

/* COLOR CLASSES */
.primary {
    background: var(--color-primary);
}

.secondary {
    background: var(--color-secondary);
}

.tertiary {
    background: var(--color-tertiary);
}

.transparent-dark {
    background: var(--transparent--dark);
}

.transparent-light {
    background: var(--transparent-light);
}

.dimmed-text {
    color: var(--dimmed-text);
}

.transparent-blue {
    background-color: var(--transparent-blue);
}

.btn-standard {
    background-color: var(--color-primary);
    color: white;
    border: 0;
    outline: none;

    transition: background-color 350ms;
}

.btn-standard:hover {
    background-color: var(--color-primary-dark);
    color: white;
}

.btn-standard:active {
    opacity: .7;
}

/* ----------------------------------------------- */

body {
    color: white;
    font-weight: 500;
    background-color: black;

}

.container {
    width: 75%;
}

#background {
    background: black url("../images/bg.jpg") center no-repeat;
    background-size: cover;

    height: 100vh;
    width: 100vw;
    z-index: -10;

    opacity: .30;
    position: fixed;
    top: 0;
    z-index: -100;

    position: absolute;
}


/* HEADER */
header {
    display: block;
    z-index: 1;
    background: linear-gradient(black, transparent);
}

header #top-controls {
    height: 32px;
    width: 150px;
}

header .select-group {
    padding: 0;
}

header .select-group select {
    color: white;
    width: 60px;
    text-indent: -130px;
    background: black url("../images/language.png") left no-repeat;
    background-size: 20px;
    background-position: 7px;

}

#sign-in {
    width: 70px;
    font-size: .9em;
    font-weight: 500;
}

#language,
#sign-in {
    display: block;
    height: 100%;
}

/* --------------- */

#title-section {
    width: 58%;
    height: 450px;
}

#title-section h1 {
    font-weight: 900;
}

#title-section form {
    position: relative;
}

#title-section form #email-input {
    background: var(--transparent--dark);
    outline-color: white;
    outline-width: 1px;
}


#title-section form #form-error-msg {
    position: absolute;
    bottom: -25px;

}

#title-section form #get-start-btn {
    width: 36%;
    font-weight: 500;
   
}

